--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -370,7 +370,7 @@
     "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
     "                                                               0]\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
-    "            fit = fun(cv=5, random_state=seed).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5, random_state=seed, n_jobs=-1).fit(X_train, y_train)\n",
     "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "        y_pred = fit.predict(X_test)\n",
