--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -326,8 +326,8 @@
    "id": "b5cb6b81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-02T20:32:37.617100Z",
-     "start_time": "2023-02-02T20:32:35.679402Z"
+     "end_time": "2023-02-02T20:57:22.364573Z",
+     "start_time": "2023-02-02T20:57:20.999128Z"
     }
    },
    "outputs": [],
@@ -416,6 +416,7 @@
     "    return np.array(list(map(_testing_error_rep, tqdm(num_attr))))\n",
     "\n",
     "\n",
+    "print(r\"ABIDE_age_MI_ElasticNetCV\")\n",
     "output = testing_error_num_attr(\n",
     "    num_attr=list(\n",
     "        map(int,\n",
