use multiprocessing to allow to use all CPUs instead of just CV folds

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -372,12 +372,12 @@
     "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
     "                                                               0]\n",
     "        if fun in [ElasticNetCV, LassoCV]:\n",
-    "            fit = fun(cv=5, random_state=seed, n_jobs=-1).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5, random_state=seed).fit(X_train, y_train)\n",
     "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "        elif fun in [LarsCV\n",
     "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
-    "            fit = fun(cv=5, n_jobs=-1).fit(X_train, y_train)\n",
+    "            fit = fun(cv=5).fit(X_train, y_train)\n",
     "        y_pred = fit.predict(X_test)\n",
     "        out = r2_score(y_test, y_pred)\n",
     "    else:\n",
@@ -390,6 +390,8 @@
     "                      fun=ElasticNetCV,\n",
     "                      outcome_name=\"AGE_AT_SCAN\",\n",
     "                      num_rep=10):\n",
+    "    core_num = mp.cpu_count()\n",
+    "\n",
     "    def _testing_error(seed):\n",
     "        return testing_error(num_covariates=num_covariates,\n",
     "                             training_proportion=training_proportion,\n",
@@ -397,8 +399,15 @@
     "                             outcome_name=outcome_name,\n",
     "                             seed=seed)\n",
     "\n",
+    "    def _testing_error_slice(_slice):\n",
+    "        return np.array(list(map(_testing_error, _slice)))\n",
+    "\n",
     "    seeds = np.arange(num_rep)\n",
-    "    return np.array(list(map(_testing_error, seeds)))\n",
+    "    _iter = np.array_split(seeds, core_num)\n",
+    "    with mp.Pool(core_num) as pl:\n",
+    "        mp_output = pl.map(_testing_error_slice, _iter)\n",
+    "    mp_output = np.hstack(mp_output)\n",
+    "    return mp_output\n",
     "\n",
     "\n",
     "def testing_error_num_attr(num_attr,\n",
@@ -581,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
