add sklearn.feature_selection.mutual_info_regression for screening

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T22:59:15.265746Z",
-     "start_time": "2023-02-01T22:59:14.007465Z"
+     "end_time": "2023-02-05T17:00:42.941011Z",
+     "start_time": "2023-02-05T17:00:40.911378Z"
     }
    },
    "outputs": [],
@@ -24,6 +24,7 @@
     "from sklearn.linear_model import ElasticNetCV\n",
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.linear_model import LarsCV\n",
+    "from sklearn.linear_model import LassoLarsCV\n",
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm as tqdm"
@@ -72,6 +73,13 @@
     "                                                 sample=1250000,\n",
     "                                                 multp=10)\n",
     "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
+    "\n",
+    "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
+    "                                                        _usecols=abide_name,\n",
+    "                                                        csv_engine=\"c\",\n",
+    "                                                        sample=1250000,\n",
+    "                                                        multp=10)\n",
+    "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
     "                                                   _usecols=abide_name,\n",
@@ -343,6 +351,7 @@
     "from sklearn.linear_model import ElasticNetCV\n",
     "from sklearn.linear_model import RidgeCV\n",
     "from sklearn.linear_model import LarsCV\n",
+    "from sklearn.linear_model import LassoLarsCV\n",
     "from sklearn.metrics import r2_score\n",
     "import multiprocess as mp\n",
     "from tqdm import tqdm\n",
@@ -350,8 +359,9 @@
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
     "columns = np.load(r\"./ABIDE_columns.npy\")\n",
-    "abide_dep = np.load(r\"./ABIDE_age_MI_output.npy\"\n",
-    "                    )  # for Pearson, use ABIDE_age_Pearson_output.npy\n",
+    "abide_dep = np.load(\n",
+    "    r\"./ABIDE_age_MI_output.npy\"\n",
+    ")  # for Pearson, use ABIDE_age_Pearson_output.npy; for skMI, use ABIDE_age_skMI_output.npy\n",
     "\n",
     "\n",
     "def testing_error(num_covariates=20,\n",
@@ -375,7 +385,7 @@
     "            fit = fun(cv=5, random_state=seed, n_jobs=-1).fit(X_train, y_train)\n",
     "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
     "            fit = fun(cv=5).fit(X_train, y_train)\n",
-    "        elif fun in [LarsCV\n",
+    "        elif fun in [LarsCV, LassoLarsCV\n",
     "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
     "            fit = fun(cv=5, n_jobs=-1).fit(X_train, y_train)\n",
     "        y_pred = fit.predict(X_test)\n",
