write a job generation script

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-05T17:00:42.941011Z",
-     "start_time": "2023-02-05T17:00:40.911378Z"
+     "end_time": "2023-02-05T20:39:56.859001Z",
+     "start_time": "2023-02-05T20:39:56.846794Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "ffa723c1-2843-424d-8ee3-90eb39dc843e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T20:00:25.218293Z",
-     "start_time": "2023-01-16T20:00:25.107337Z"
+     "end_time": "2023-02-05T20:39:58.183768Z",
+     "start_time": "2023-02-05T20:39:58.125454Z"
     }
    },
    "outputs": [],
@@ -66,6 +66,7 @@
     "np.save(r\"./ABIDE_columns\", _abide_name[1:-3])\n",
     "\n",
     "# so that the left first column is the outcome and the rest columns are areas\n",
+    "print(\"Our developed FFT-based MI calculation:\")\n",
     "\n",
     "mi_output = mi.continuous_screening_csv_parallel(csv_file,\n",
     "                                                 _usecols=abide_name,\n",
@@ -74,12 +75,16 @@
     "                                                 multp=10)\n",
     "np.save(r\"./ABIDE_age_MI_output\", mi_output)\n",
     "\n",
+    "print(\"sklearn MI calculation:\")\n",
+    "\n",
     "skmi_output = mi.continuous_skMI_screening_csv_parallel(csv_file,\n",
     "                                                        _usecols=abide_name,\n",
     "                                                        csv_engine=\"c\",\n",
     "                                                        sample=1250000,\n",
     "                                                        multp=10)\n",
     "np.save(r\"./ABIDE_age_skMI_output\", skmi_output)\n",
+    "\n",
+    "print(\"Pearson's correlation calculation:\")\n",
     "\n",
     "pearson_output = mi.Pearson_screening_csv_parallel(csv_file,\n",
     "                                                   _usecols=abide_name,\n",
@@ -103,8 +108,8 @@
    "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T22:59:04.342919Z",
-     "start_time": "2023-02-01T22:59:04.118506Z"
+     "end_time": "2023-02-05T20:40:01.361897Z",
+     "start_time": "2023-02-05T20:40:01.318269Z"
     }
    },
    "outputs": [],
@@ -120,8 +125,8 @@
    "id": "58f1a09a-45cf-46a3-be42-9f9394ee4f96",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T22:59:04.813529Z",
-     "start_time": "2023-02-01T22:59:04.781331Z"
+     "end_time": "2023-02-05T20:40:01.998457Z",
+     "start_time": "2023-02-05T20:40:01.970196Z"
     }
    },
    "outputs": [],
@@ -149,8 +154,8 @@
    "id": "742260a9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:08:23.578055Z",
-     "start_time": "2023-01-29T21:08:23.270306Z"
+     "end_time": "2023-02-05T20:40:04.508696Z",
+     "start_time": "2023-02-05T20:40:04.482145Z"
     }
    },
    "outputs": [],
@@ -168,8 +173,8 @@
    "id": "4e78ee74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:08:23.659306Z",
-     "start_time": "2023-01-29T21:08:23.579330Z"
+     "end_time": "2023-02-05T20:40:05.318750Z",
+     "start_time": "2023-02-05T20:40:05.291831Z"
     }
    },
    "outputs": [],
@@ -195,8 +200,8 @@
    "id": "d9c3680c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-20T04:56:33.182030Z",
-     "start_time": "2023-01-20T04:56:32.928624Z"
+     "end_time": "2023-02-05T20:40:06.526666Z",
+     "start_time": "2023-02-05T20:40:06.486295Z"
     }
    },
    "outputs": [],
@@ -243,8 +248,8 @@
    "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:08:28.899211Z",
-     "start_time": "2023-01-29T21:08:28.334521Z"
+     "end_time": "2023-02-05T20:40:08.223654Z",
+     "start_time": "2023-02-05T20:40:08.196270Z"
     }
    },
    "outputs": [],
@@ -260,8 +265,8 @@
    "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:08:29.334932Z",
-     "start_time": "2023-01-29T21:08:28.900487Z"
+     "end_time": "2023-02-05T20:40:08.888817Z",
+     "start_time": "2023-02-05T20:40:08.860989Z"
     }
    },
    "outputs": [],
@@ -289,8 +294,8 @@
    "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:08:29.582943Z",
-     "start_time": "2023-01-29T21:08:29.336252Z"
+     "end_time": "2023-02-05T20:40:11.457206Z",
+     "start_time": "2023-02-05T20:40:11.430288Z"
     }
    },
    "outputs": [],
@@ -308,8 +313,8 @@
    "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-29T21:08:32.746714Z",
-     "start_time": "2023-01-29T21:08:32.525826Z"
+     "end_time": "2023-02-05T20:40:12.057473Z",
+     "start_time": "2023-02-05T20:40:12.032322Z"
     }
    },
    "outputs": [],
@@ -334,8 +339,8 @@
    "id": "b5cb6b81",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-02T20:57:22.364573Z",
-     "start_time": "2023-02-02T20:57:20.999128Z"
+     "end_time": "2023-02-05T20:40:13.475591Z",
+     "start_time": "2023-02-05T20:40:13.408879Z"
     }
    },
    "outputs": [],
@@ -358,10 +363,8 @@
     "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
-    "columns = np.load(r\"./ABIDE_columns.npy\")\n",
-    "abide_dep = np.load(\n",
-    "    r\"./ABIDE_age_MI_output.npy\"\n",
-    ")  # for Pearson, use ABIDE_age_Pearson_output.npy; for skMI, use ABIDE_age_skMI_output.npy\n",
+    "columns = np.load(r\"../ABIDE_columns.npy\")\n",
+    "abide_dep = np.load(r\"../ABIDE_age_MI_output.npy\")  # dep_measure\n",
     "\n",
     "\n",
     "def testing_error(num_covariates=20,\n",
@@ -426,17 +429,181 @@
     "    return np.array(list(map(_testing_error_rep, tqdm(num_attr))))\n",
     "\n",
     "\n",
-    "print(r\"ABIDE_age_MI_ElasticNetCV\")\n",
+    "print(r\"ABIDE_age_MI_ElasticNetCV\")  # dep_measure, fun_name\n",
     "output = testing_error_num_attr(\n",
     "    num_attr=list(\n",
     "        map(int,\n",
-    "            np.around(np.linspace(0, len(columns), 50 + 1)[1:]).tolist())\n",
-    "    ),  # so here it will screen the number of covariates roughly 30 apart\n",
+    "            np.around(np.linspace(0, len(columns), 50 + 1)[1:]).tolist())),\n",
     "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
-    "    fun=ElasticNetCV,  # here it says to use ElasticNetCV\n",
+    "    fun=ElasticNetCV,  # fun_name\n",
     "    outcome_name=\"AGE_AT_SCAN\",\n",
     "    num_rep=30)\n",
-    "np.save(r\"./ABIDE_age_MI_ElasticNetCV\", output)"
+    "np.save(r\"./ABIDE_age_MI_ElasticNetCV\", output)  # dep_measure, fun_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "92101749",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-05T20:48:04.961190Z",
+     "start_time": "2023-02-05T20:48:04.932341Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "def job_creator(dep_measure, fun_name):\n",
+    "    Path(r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
+    "         \".sh\").touch()\n",
+    "    Path(r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
+    "         \".py\").touch()\n",
+    "    bash_script = open(\n",
+    "        r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
+    "        \".sh\", 'w')\n",
+    "    py_script = open(\n",
+    "        r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
+    "        \".py\", 'w')\n",
+    "    bash_script.write(\"\"\"\n",
+    "#!/bin/bash\n",
+    "#SBATCH --account=def-masd\n",
+    "#SBATCH --cpus-per-task=10\n",
+    "#SBATCH --mem=80G\n",
+    "#SBATCH --time=6-00:00:00\n",
+    "#SBATCH --job-name={dep_measure}_{fun_name}\n",
+    "\n",
+    "module load gcc llvm rust arrow cuda nodejs python/3.8.10\n",
+    "\n",
+    "virtualenv $HOME/jupyter_py3\n",
+    "source $HOME/jupyter_py3/bin/activate\n",
+    "\n",
+    "nvidia-smi\n",
+    "lscpu\n",
+    "\n",
+    "python3 ABIDE_age_{dep_measure}_{fun_name}.py\n",
+    "    \"\"\".format(dep_measure=dep_measure, fun_name=fun_name))\n",
+    "    py_script.write(\"\"\"\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau\n",
+    "from scipy.stats import rankdata\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.linear_model import LarsCV\n",
+    "from sklearn.linear_model import LassoLarsCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "original_df = pd.read_csv(csv_file, encoding='unicode_escape', engine='c')\n",
+    "columns = np.load(r\"../ABIDE_columns.npy\")\n",
+    "abide_dep = np.load(r\"../ABIDE_age_{dep_measure}_output.npy\")  # dep_measure\n",
+    "\n",
+    "\n",
+    "def testing_error(num_covariates=20,\n",
+    "                  training_proportion=.8,\n",
+    "                  fun=ElasticNetCV,\n",
+    "                  outcome_name=\"AGE_AT_SCAN\",\n",
+    "                  seed=1):\n",
+    "    np.random.seed(seed)\n",
+    "    _usecols = np.hstack((outcome_name, \"SEX\", \"DX_GROUP\",\n",
+    "                          columns[np.argsort(-abide_dep)][:num_covariates]))\n",
+    "    df = original_df[_usecols].dropna(inplace=False).sample(\n",
+    "        frac=1, random_state=seed, replace=False).reset_index(drop=True,\n",
+    "                                                              inplace=False)\n",
+    "    if df.shape[0] > 20:\n",
+    "        train_test_div = int(np.around(df.shape[0] * training_proportion))\n",
+    "        X_train, y_train = df.iloc[:train_test_div,\n",
+    "                                   1:], df.iloc[:train_test_div, 0]\n",
+    "        X_test, y_test = df.iloc[train_test_div:, 1:], df.iloc[train_test_div:,\n",
+    "                                                               0]\n",
+    "        if fun in [ElasticNetCV, LassoCV]:\n",
+    "            fit = fun(cv=5, random_state=seed, n_jobs=-1).fit(X_train, y_train)\n",
+    "        elif fun in [RidgeCV]:  # RidgeCV doesn't have seed setting and n_jobs\n",
+    "            fit = fun(cv=5).fit(X_train, y_train)\n",
+    "        elif fun in [LarsCV, LassoLarsCV\n",
+    "                     ]:  # LarsCV doesn't have seed setting but have n_jobs\n",
+    "            fit = fun(cv=5, n_jobs=-1).fit(X_train, y_train)\n",
+    "        y_pred = fit.predict(X_test)\n",
+    "        out = r2_score(y_test, y_pred)\n",
+    "    else:\n",
+    "        out = np.nan\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def testing_error_rep(num_covariates=20,\n",
+    "                      training_proportion=.8,\n",
+    "                      fun=ElasticNetCV,\n",
+    "                      outcome_name=\"AGE_AT_SCAN\",\n",
+    "                      num_rep=10):\n",
+    "    def _testing_error(seed):\n",
+    "        return testing_error(num_covariates=num_covariates,\n",
+    "                             training_proportion=training_proportion,\n",
+    "                             fun=fun,\n",
+    "                             outcome_name=outcome_name,\n",
+    "                             seed=seed)\n",
+    "\n",
+    "    seeds = np.arange(num_rep)\n",
+    "    return np.array(list(map(_testing_error, seeds)))\n",
+    "\n",
+    "\n",
+    "def testing_error_num_attr(num_attr,\n",
+    "                           training_proportion=.8,\n",
+    "                           fun=ElasticNetCV,\n",
+    "                           outcome_name=\"AGE_AT_SCAN\",\n",
+    "                           num_rep=10):\n",
+    "    def _testing_error_rep(_num_attr):\n",
+    "        return testing_error_rep(num_covariates=_num_attr,\n",
+    "                                 training_proportion=training_proportion,\n",
+    "                                 fun=fun,\n",
+    "                                 outcome_name=outcome_name,\n",
+    "                                 num_rep=num_rep)\n",
+    "\n",
+    "    return np.array(list(map(_testing_error_rep, tqdm(num_attr))))\n",
+    "\n",
+    "\n",
+    "print(r\"ABIDE_age_{dep_measure}_{fun_name}\")  # dep_measure, fun_name\n",
+    "output = testing_error_num_attr(\n",
+    "    num_attr=list(\n",
+    "        map(int,\n",
+    "            np.around(np.linspace(0, len(columns), 50 + 1)[1:]).tolist())),\n",
+    "    training_proportion=.8,  # 80/20 training+validation/testing division\n",
+    "    fun={fun_name},  # fun_name\n",
+    "    outcome_name=\"AGE_AT_SCAN\",\n",
+    "    num_rep=30)\n",
+    "np.save(r\"./ABIDE_age_{dep_measure}_{fun_name}\", output)  # dep_measure, fun_name\n",
+    "    \"\"\".format(dep_measure=dep_measure, fun_name=fun_name))\n",
+    "\n",
+    "\n",
+    "for fun_name in [\n",
+    "        \"LassoCV\", \"ElasticNetCV\", \"RidgeCV\", \"LarsCV\", \"LassoLarsCV\"\n",
+    "]:\n",
+    "    for dep_measure in [\"MI\", \"Pearson\", \"skMI\"]:\n",
+    "        job_creator(dep_measure, fun_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cabae090",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-05T20:48:06.612821Z",
+     "start_time": "2023-02-05T20:48:05.350965Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!find . -name '*.py' -exec autopep8 --in-place '{}' \\;\n",
+    "!find . -name '*.py' -exec autopep8 --in-place '{}' \\;"
    ]
   },
   {
@@ -454,8 +621,8 @@
    "id": "77de1868",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T23:23:50.881455Z",
-     "start_time": "2023-02-01T23:23:50.661143Z"
+     "end_time": "2023-02-05T20:40:23.882611Z",
+     "start_time": "2023-02-05T20:40:23.824290Z"
     }
    },
    "outputs": [],
@@ -494,7 +661,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f4964c7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-05T20:40:24.670878Z",
+     "start_time": "2023-02-05T20:40:24.628422Z"
+    }
+   },
    "outputs": [],
    "source": [
     "columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
@@ -531,7 +703,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b4279c6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-05T20:40:25.290106Z",
+     "start_time": "2023-02-05T20:40:25.248343Z"
+    }
+   },
    "outputs": [],
    "source": [
     "columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
