--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -51,6 +51,23 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau\n",
+    "from scipy.stats import rankdata\n",
+    "from scipy.stats import norm\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.linear_model import LarsCV\n",
+    "from sklearn.linear_model import LassoLarsCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm as tqdm\n",
+    "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
     "abide = dd.read_csv(csv_file, sample=1250000)\n",
@@ -206,6 +223,23 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dask import dataframe as dd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import kendalltau\n",
+    "from scipy.stats import rankdata\n",
+    "from scipy.stats import norm\n",
+    "import fastHDMI as mi\n",
+    "from sklearn.linear_model import LassoCV\n",
+    "from sklearn.linear_model import ElasticNetCV\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "from sklearn.linear_model import LarsCV\n",
+    "from sklearn.linear_model import LassoLarsCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "import multiprocess as mp\n",
+    "from tqdm import tqdm as tqdm\n",
+    "\n",
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
     "# abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
     "abide = dd.read_csv(csv_file, sample=1250000)\n",
@@ -447,8 +481,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-05T20:59:30.363752Z",
-     "start_time": "2023-02-05T20:59:30.333181Z"
+     "end_time": "2023-02-05T21:16:00.514166Z",
+     "start_time": "2023-02-05T21:16:00.483392Z"
     }
    },
    "outputs": [],
@@ -596,8 +630,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-05T20:59:33.010241Z",
-     "start_time": "2023-02-05T20:59:31.644519Z"
+     "end_time": "2023-02-05T21:16:08.059476Z",
+     "start_time": "2023-02-05T21:16:06.633990Z"
     }
    },
    "outputs": [],
