--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -672,7 +672,7 @@
     }
    ],
    "source": [
-    "def plot_results(fun_name):\n",
+    "def plot_results(plt, fun_name):\n",
     "    columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
     "    ABIDE_age_MI_foo = np.load(\n",
     "        r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(fun_name=fun_name))\n",
@@ -705,7 +705,7 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "plot_results(\"RidgeCV\")"
+    "plot_results(plt, \"RidgeCV\")"
    ]
   },
   {
