--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -672,7 +672,7 @@
     }
    ],
    "source": [
-    "def plot_results(plt, fun_name):\n",
+    "def plot_results(_plt, fun_name):\n",
     "    columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
     "    ABIDE_age_MI_foo = np.load(\n",
     "        r\"./ABIDE_predict_age/ABIDE_age_MI_{fun_name}.npy\".format(fun_name=fun_name))\n",
@@ -687,111 +687,23 @@
     "    Pearson_RidgeCV_mean = np.mean(ABIDE_age_Pearson_foo, 1)\n",
     "    Pearson_RidgeCV_std = np.std(ABIDE_age_Pearson_foo, 1)\n",
     "\n",
-    "    plt.plot(num_attr, MI_RidgeCV_mean, label=\"Mutual Information\")\n",
-    "    plt.fill_between(num_attr,\n",
-    "                     (MI_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.025)),\n",
-    "                     (MI_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.975)),\n",
-    "                     color='b',\n",
-    "                     alpha=.1)\n",
-    "    plt.plot(num_attr, Pearson_RidgeCV_mean, label=\"Pearson Correlation\")\n",
-    "    plt.fill_between(\n",
+    "    _plt.plot(num_attr, MI_RidgeCV_mean, label=\"Mutual Information\")\n",
+    "    _plt.fill_between(num_attr,\n",
+    "                      (MI_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.025)),\n",
+    "                      (MI_RidgeCV_mean + MI_RidgeCV_std * norm.ppf(0.975)),\n",
+    "                      color='b',\n",
+    "                      alpha=.1)\n",
+    "    _plt.plot(num_attr, Pearson_RidgeCV_mean, label=\"Pearson Correlation\")\n",
+    "    _plt.fill_between(\n",
     "        num_attr, (Pearson_RidgeCV_mean +\n",
     "                   Pearson_RidgeCV_std * norm.ppf(0.025)),\n",
     "        (Pearson_RidgeCV_mean + Pearson_RidgeCV_std * norm.ppf(0.975)),\n",
     "        color='b',\n",
     "        alpha=.1)\n",
-    "    plt.legend()\n",
-    "    plt.title(fun_name)\n",
-    "    plt.show()\n",
+    "    _plt.title(fun_name)\n",
     "\n",
     "\n",
     "plot_results(plt, \"RidgeCV\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f4964c7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:24.670878Z",
-     "start_time": "2023-02-05T20:40:24.628422Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
-    "ABIDE_age_MI_LassoCV = np.load(r\"./ABIDE_predict_age/ABIDE_age_MI_LassoCV.npy\")\n",
-    "ABIDE_age_Pearson_LassoCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_Pearson_LassoCV.npy\")\n",
-    "num_attr = np.around(np.linspace(\n",
-    "    0,\n",
-    "    len(columns) / 20, 500 + 1)[1:])  # ADJUST this based on actual settings\n",
-    "\n",
-    "MI_LassoCV_mean = np.mean(ABIDE_age_MI_LassoCV, 1)\n",
-    "MI_LassoCV_std = np.std(ABIDE_age_MI_LassoCV, 1)\n",
-    "Pearson_LassoCV_mean = np.mean(ABIDE_age_Pearson_LassoCV, 1)\n",
-    "Pearson_LassoCV_std = np.std(ABIDE_age_Pearson_LassoCV, 1)\n",
-    "\n",
-    "plt.plot(num_attr, MI_LassoCV_mean, label=\"Mutual Information\")\n",
-    "plt.fill_between(num_attr,\n",
-    "                 (MI_LassoCV_mean + MI_LassoCV_std * norm.ppf(0.025)),\n",
-    "                 (MI_LassoCV_mean + MI_LassoCV_std * norm.ppf(0.975)),\n",
-    "                 color='b',\n",
-    "                 alpha=.1)\n",
-    "plt.plot(num_attr, Pearson_LassoCV_mean, label=\"Pearson Correlation\")\n",
-    "plt.fill_between(\n",
-    "    num_attr, (Pearson_LassoCV_mean + Pearson_LassoCV_std * norm.ppf(0.025)),\n",
-    "    (Pearson_LassoCV_mean + Pearson_LassoCV_std * norm.ppf(0.975)),\n",
-    "    color='b',\n",
-    "    alpha=.1)\n",
-    "plt.legend()\n",
-    "plt.title(r\"LASSO\")\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b4279c6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-02-05T20:40:25.290106Z",
-     "start_time": "2023-02-05T20:40:25.248343Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "columns = np.load(r\"./ABIDE_predict_age/ABIDE_columns.npy\")\n",
-    "ABIDE_age_MI_ElasticNetCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_MI_ElasticNetCV.npy\")\n",
-    "ABIDE_age_Pearson_ElasticNetCV = np.load(\n",
-    "    r\"./ABIDE_predict_age/ABIDE_age_Pearson_ElasticNetCV.npy\")\n",
-    "num_attr = np.around(np.linspace(\n",
-    "    0,\n",
-    "    len(columns) / 20, 500 + 1)[1:])  # ADJUST this based on actual settings\n",
-    "\n",
-    "MI_ElasticNetCV_mean = np.mean(ABIDE_age_MI_ElasticNetCV, 1)\n",
-    "MI_ElasticNetCV_std = np.std(ABIDE_age_MI_ElasticNetCV, 1)\n",
-    "Pearson_ElasticNetCV_mean = np.mean(ABIDE_age_Pearson_ElasticNetCV, 1)\n",
-    "Pearson_ElasticNetCV_std = np.std(ABIDE_age_Pearson_ElasticNetCV, 1)\n",
-    "\n",
-    "plt.plot(num_attr, MI_ElasticNetCV_mean, label=\"Mutual Information\")\n",
-    "plt.fill_between(\n",
-    "    num_attr, (MI_ElasticNetCV_mean + MI_ElasticNetCV_std * norm.ppf(0.025)),\n",
-    "    (MI_ElasticNetCV_mean + MI_ElasticNetCV_std * norm.ppf(0.975)),\n",
-    "    color='b',\n",
-    "    alpha=.1)\n",
-    "plt.plot(num_attr, Pearson_ElasticNetCV_mean, label=\"Pearson Correlation\")\n",
-    "plt.fill_between(\n",
-    "    num_attr,\n",
-    "    (Pearson_ElasticNetCV_mean + Pearson_ElasticNetCV_std * norm.ppf(0.025)),\n",
-    "    (Pearson_ElasticNetCV_mean + Pearson_ElasticNetCV_std * norm.ppf(0.975)),\n",
-    "    color='b',\n",
-    "    alpha=.1)\n",
-    "plt.legend()\n",
-    "plt.title(r\"Elastic Net\")\n",
-    "plt.show()"
    ]
   },
   {
@@ -819,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
