--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:31:50.841367Z",
-     "start_time": "2023-02-06T08:31:50.050113Z"
+     "end_time": "2023-02-06T08:46:57.327333Z",
+     "start_time": "2023-02-06T08:46:56.537608Z"
     }
    },
    "outputs": [],
@@ -20,6 +20,7 @@
     "from KDEpy import FFTKDE as _FFTKDE\n",
     "from bed_reader import open_bed as _open_bed\n",
     "from numba import njit as _njit\n",
+    "from numba import jit as _jit\n",
     "import numpy as _np\n",
     "from tqdm import tqdm as _tqdm\n",
     "import warnings as _warnings\n",
@@ -41,8 +42,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:31:50.909026Z",
-     "start_time": "2023-02-06T08:31:50.842520Z"
+     "end_time": "2023-02-06T08:46:57.393900Z",
+     "start_time": "2023-02-06T08:46:57.328516Z"
     }
    },
    "outputs": [],
@@ -119,7 +120,7 @@
     "\n",
     "    mi_temp = _joint_to_mi(joint=joint, forward_euler_a=forward_euler_step)\n",
     "\n",
-    "    #     del p0, p1, p2, _a, a_temp, _, _b0, y_cond_p0, _b1, y_cond_p1, _b2, y_cond_p2, joint, mask, forward_euler_step\n",
+    "    del p0, p1, p2, _a, a_temp, _, _b0, y_cond_p0, _b1, y_cond_p1, _b2, y_cond_p2, joint, mask, forward_euler_step\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -200,7 +201,7 @@
     "                           forward_euler_a=a_forward_euler_step,\n",
     "                           forward_euler_b=b_forward_euler_step)\n",
     "\n",
-    "    #     del _temp, data, _data, grid, joint, mask, a_forward_euler_step, b_forward_euler_step\n",
+    "    del _temp, data, _data, grid, joint, mask, a_forward_euler_step, b_forward_euler_step\n",
     "\n",
     "    return mi_temp\n",
     "\n",
@@ -240,8 +241,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:31:51.019541Z",
-     "start_time": "2023-02-06T08:31:50.910592Z"
+     "end_time": "2023-02-06T08:46:57.506394Z",
+     "start_time": "2023-02-06T08:46:57.395442Z"
     }
    },
    "outputs": [],
@@ -527,8 +528,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:31:51.042014Z",
-     "start_time": "2023-02-06T08:31:51.020881Z"
+     "end_time": "2023-02-06T08:46:57.528724Z",
+     "start_time": "2023-02-06T08:46:57.507638Z"
     }
    },
    "outputs": [],
@@ -991,8 +992,8 @@
    "id": "a07043f6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:31:51.057001Z",
-     "start_time": "2023-02-06T08:31:51.043136Z"
+     "end_time": "2023-02-06T08:46:57.544035Z",
+     "start_time": "2023-02-06T08:46:57.529736Z"
     }
    },
    "outputs": [],
@@ -1267,8 +1268,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:32:09.306325Z",
-     "start_time": "2023-02-06T08:31:51.057933Z"
+     "end_time": "2023-02-06T08:47:16.961415Z",
+     "start_time": "2023-02-06T08:46:57.544978Z"
     }
    },
    "outputs": [
@@ -1276,9 +1277,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  4.599790320459677e-05\n",
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00020458066530663335\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0019269806603973447\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0010021759238640383\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0010176316609762477\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0017966852483310516\n",
       "MI estimate between a,a and a,b:  0.11484453582973957 0.0018942218779855419\n"
      ]
     }
@@ -1335,8 +1336,8 @@
    "id": "bca5549d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:32:17.651312Z",
-     "start_time": "2023-02-06T08:32:09.307735Z"
+     "end_time": "2023-02-06T08:47:25.875815Z",
+     "start_time": "2023-02-06T08:47:16.962947Z"
     }
    },
    "outputs": [
@@ -1353,7 +1354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:06<00:00, 22.89it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:07<00:00, 21.81it/s]\n"
      ]
     },
     {
@@ -1405,8 +1406,8 @@
    "id": "f5026fad",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:32:21.866247Z",
-     "start_time": "2023-02-06T08:32:17.653083Z"
+     "end_time": "2023-02-06T08:47:29.964010Z",
+     "start_time": "2023-02-06T08:47:25.877710Z"
     }
    },
    "outputs": [
@@ -1470,8 +1471,8 @@
    "id": "d657c60c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:32:44.116322Z",
-     "start_time": "2023-02-06T08:32:21.867363Z"
+     "end_time": "2023-02-06T08:47:52.252847Z",
+     "start_time": "2023-02-06T08:47:29.965959Z"
     }
    },
    "outputs": [
@@ -1521,8 +1522,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:32:44.120068Z",
-     "start_time": "2023-02-06T08:32:44.117416Z"
+     "end_time": "2023-02-06T08:47:52.257331Z",
+     "start_time": "2023-02-06T08:47:52.254425Z"
     }
    },
    "outputs": [],
@@ -1598,8 +1599,8 @@
    "id": "48e4c7d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:33:11.633070Z",
-     "start_time": "2023-02-06T08:32:44.121100Z"
+     "end_time": "2023-02-06T08:48:19.222254Z",
+     "start_time": "2023-02-06T08:47:52.258695Z"
     }
    },
    "outputs": [
@@ -1607,7 +1608,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 74.28it/s]\n"
+      "100%|███████████████████████████████████████| 2004/2004 [00:26<00:00, 75.79it/s]\n"
      ]
     },
     {
@@ -1636,8 +1637,8 @@
    "id": "d637d850",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:33:21.818448Z",
-     "start_time": "2023-02-06T08:33:11.634970Z"
+     "end_time": "2023-02-06T08:48:29.302759Z",
+     "start_time": "2023-02-06T08:48:19.223268Z"
     }
    },
    "outputs": [
@@ -1645,7 +1646,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 35.42it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 34.66it/s]\n"
      ]
     },
     {
@@ -1662,7 +1663,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 100.16it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 104.86it/s]\n"
      ]
     },
     {
@@ -1679,7 +1680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 94.73it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 100.72it/s]\n"
      ]
     },
     {
@@ -1718,8 +1719,8 @@
    "id": "d19ddd1c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:33:28.354104Z",
-     "start_time": "2023-02-06T08:33:21.819675Z"
+     "end_time": "2023-02-06T08:48:36.242463Z",
+     "start_time": "2023-02-06T08:48:29.304052Z"
     }
    },
    "outputs": [
@@ -1727,7 +1728,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 2004/2004 [00:06<00:00, 328.51it/s]"
+      "100%|██████████████████████████████████████| 2004/2004 [00:06<00:00, 308.58it/s]\n"
      ]
     },
     {
@@ -1735,13 +1736,6 @@
      "output_type": "stream",
      "text": [
       "[0.00871276 0.00251065 0.00996954 ... 0.00317663 0.00394264 0.00262528]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     },
     {
@@ -1770,8 +1764,8 @@
    "id": "4b51a385",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:33:30.246813Z",
-     "start_time": "2023-02-06T08:33:28.355066Z"
+     "end_time": "2023-02-06T08:48:38.332700Z",
+     "start_time": "2023-02-06T08:48:36.243508Z"
     }
    },
    "outputs": [
@@ -1779,7 +1773,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 103.38it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:01<00:00, 92.06it/s]\n"
      ]
     },
     {
@@ -1808,8 +1802,8 @@
    "id": "0c9dda67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:33:57.880134Z",
-     "start_time": "2023-02-06T08:33:30.248058Z"
+     "end_time": "2023-02-06T08:49:06.037562Z",
+     "start_time": "2023-02-06T08:48:38.333945Z"
     }
    },
    "outputs": [
@@ -1817,7 +1811,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 5/5 [00:27<00:00,  5.51s/it]\n"
+      "100%|█████████████████████████████████████████████| 5/5 [00:27<00:00,  5.52s/it]\n"
      ]
     },
     {
@@ -1853,8 +1847,8 @@
    "id": "174c8ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T08:34:05.328258Z",
-     "start_time": "2023-02-06T08:33:57.881328Z"
+     "end_time": "2023-02-06T08:49:13.376508Z",
+     "start_time": "2023-02-06T08:49:06.039202Z"
     }
    },
    "outputs": [
@@ -1862,7 +1856,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 35.20it/s]\n"
+      "100%|█████████████████████████████████████████| 160/160 [00:04<00:00, 35.86it/s]\n"
      ]
     },
     {
@@ -1879,7 +1873,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 111.36it/s]\n"
+      "100%|████████████████████████████████████████| 160/160 [00:01<00:00, 116.43it/s]\n"
      ]
     },
     {
