--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -481,8 +481,8 @@
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-05T21:16:00.514166Z",
-     "start_time": "2023-02-05T21:16:00.483392Z"
+     "end_time": "2023-02-06T10:14:12.370095Z",
+     "start_time": "2023-02-06T10:14:12.338123Z"
     }
    },
    "outputs": [],
@@ -503,8 +503,9 @@
     "        \".py\", 'w')\n",
     "    bash_script.write(\"\"\"\n",
     "#!/bin/bash\n",
-    "#SBATCH --account=def-masd\n",
-    "#SBATCH --cpus-per-task=10\n",
+    "#SBATCH --account=def-cgreenwo\n",
+    "#SBATCH --nodes=1\n",
+    "#SBATCH --ntasks-per-node=10\n",
     "#SBATCH --mem=80G\n",
     "#SBATCH --time=6-00:00:00\n",
     "#SBATCH --job-name={dep_measure}_{fun_name}\n",
@@ -630,8 +631,8 @@
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-05T21:16:08.059476Z",
-     "start_time": "2023-02-05T21:16:06.633990Z"
+     "end_time": "2023-02-06T10:14:15.323387Z",
+     "start_time": "2023-02-06T10:14:13.746780Z"
     }
    },
    "outputs": [],
@@ -731,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
