--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -477,12 +477,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "10871140",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T10:14:12.370095Z",
-     "start_time": "2023-02-06T10:14:12.338123Z"
+     "end_time": "2023-02-06T21:11:54.948708Z",
+     "start_time": "2023-02-06T21:11:54.866736Z"
     }
    },
    "outputs": [],
@@ -501,7 +501,7 @@
     "    py_script = open(\n",
     "        r\"./ABIDE_predict_age/ABIDE_age_\" + dep_measure + \"_\" + fun_name +\n",
     "        \".py\", 'w')\n",
-    "    bash_script.write(\"\"\"\n",
+    "    bash_script.write(r\"\"\"\n",
     "#!/bin/bash\n",
     "#SBATCH --account=def-cgreenwo\n",
     "#SBATCH --nodes=1\n",
@@ -510,17 +510,35 @@
     "#SBATCH --time=6-00:00:00\n",
     "#SBATCH --job-name={dep_measure}_{fun_name}\n",
     "\n",
-    "module load gcc llvm rust arrow cuda nodejs python/3.8.10\n",
+    "module load gcc llvm rust arrow cuda nodejs python/3.8.10 r/4.0.2 python-build-bundle\n",
     "\n",
-    "virtualenv $HOME/jupyter_py3\n",
-    "source $HOME/jupyter_py3/bin/activate\n",
+    "virtualenv --no-download $SLURM_TMPDIR/env\n",
+    "source $SLURM_TMPDIR/env/bin/activate\n",
+    "pip install --no-index --upgrade pip\n",
+    "\n",
+    "# ### run this block at the login node to build wheels\n",
+    "# ### get wheels builder\n",
+    "# git clone https://github.com/ComputeCanada/wheels_builder\n",
+    "# export PATH=$PATH:${{HOME}}/wheels_builder\n",
+    "# ### build KDEpy 1.1.0\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package KDEpy --version 1.1.0 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built nonconvexAG 1.0.6\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package nonconvexAG --version 1.0.6 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "# ### built fastHDMI 1.16.28\n",
+    "# ${{HOME}}/wheels_builder/unmanylinuxize.sh --package fastHDMI --version 1.16.28 --python 3.8,3.9,3.10 --find_links https://files.pythonhosted.org/packages/\n",
+    "\n",
+    "# Here basically to build the packages at login node and install them in slurm job submission locally\n",
+    "pip install --no-index bed-reader numpy sklearn matplotlib scipy numba multiprocess scikit-learn cupy rpy2\n",
+    "pip install --no-index /home/kyang/KDEpy-1.1.0+computecanada-cp38-cp38-linux_x86_64.whl\n",
+    "pip install --no-index /home/kyang/nonconvexAG-1.0.6+computecanada-py3-none-any.whl\n",
+    "pip install --no-index /home/kyang/fastHDMI-1.16.28+computecanada-py3-none-any.whl\n",
     "\n",
     "nvidia-smi\n",
     "lscpu\n",
     "\n",
     "python3 ABIDE_age_{dep_measure}_{fun_name}.py\n",
     "    \"\"\".format(dep_measure=dep_measure, fun_name=fun_name))\n",
-    "    py_script.write(\"\"\"\n",
+    "    py_script.write(r\"\"\"\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from dask import dataframe as dd\n",
@@ -627,12 +645,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "cd017b70",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T10:14:15.323387Z",
-     "start_time": "2023-02-06T10:14:13.746780Z"
+     "end_time": "2023-02-06T21:11:56.654910Z",
+     "start_time": "2023-02-06T21:11:55.316156Z"
     }
    },
    "outputs": [],
@@ -681,7 +699,7 @@
     "        r\"./ABIDE_predict_age/ABIDE_age_Pearson_{fun_name}.npy\".format(fun_name=fun_name))\n",
     "    num_attr = np.around(np.linspace(\n",
     "        0,\n",
-    "        len(columns), 50 + 1)[1:])  # ADJUST this based on actual settings\n",
+    "        len(columns), 10 + 1)[1:])  # ADJUST this based on actual settings\n",
     "\n",
     "    MI_RidgeCV_mean = np.mean(ABIDE_age_MI_foo, 1)\n",
     "    MI_RidgeCV_std = np.std(ABIDE_age_MI_foo, 1)\n",
@@ -732,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
